[레거시 코드 리팩터링 - 3단계] 엔델(김민준) 미션 제출합니다. (#624)
* refactor: menu, menu_product 양방향 제거, 관리 주체를 menu로 변경

* refactor: order, OrderLineItem 양방향 제거, 관리 주체를 order로 변경

* refactor: OrderTable과 TableGroup의 양방향 의존을 제거

* refactor: Order가 OrderTable을 Long id로 참조하도록 변경

* refactor: table 패키지에서 order를 참조하지 않도록 이벤트 사용

* chore: table 패키지의 TableGroupService에서 order 패키지를 참조하지 않도록 패키지 분할

* refactor: 메뉴 가격 검증 로직을 도메인 내부로 이동. 이동하면서 제품의 가격을 동시에 가져오기 위해 메뉴 상품의 상품 참조를 직접참조로 변경

* refactor: 주문 시 주문 정보를 스냅샷으로 가져와 비교한 다음 주문을 생성

* refactor: 중복 로직을 사용

* refactor: 네이밍 변경

* refactor: 주문 후 메뉴 정보를 바꿔도 주문 항목이 변경되지 않도록 한다.