@@ -3,10 +3,12 @@ package kitchenpos.application;
 import kitchenpos.ServiceTest;
 import kitchenpos.menu.domain.Menu;
 import kitchenpos.menu.domain.MenuGroup;
+import kitchenpos.menu.domain.vo.Price;
 import kitchenpos.order.application.OrderService;
 import kitchenpos.order.application.dto.OrderCreateRequest;
 import kitchenpos.order.application.dto.OrderResponse;
 import kitchenpos.order.domain.Order;
+import kitchenpos.order.domain.OrderLineItem;
 import kitchenpos.order.domain.OrderStatus;
 import kitchenpos.table.domain.OrderTable;
 import org.junit.jupiter.api.BeforeEach;
@@ -15,6 +17,7 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
+import java.lang.reflect.Field;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -39,9 +42,9 @@ class OrderServiceTest extends ServiceTest {
         menuGroup = testFixtureBuilder.buildMenuGroup(menuGroup);
 
         menus = new ArrayList<>();
-        Menu menu1 = new Menu("name", new BigDecimal(100), menuGroup.getId(), Collections.emptyList());
+        Menu menu1 = new Menu("name", new BigDecimal(0), menuGroup.getId(), Collections.emptyList());
         menus.add(testFixtureBuilder.buildMenu(menu1));
-        Menu menu2 = new Menu("name", new BigDecimal(100), menuGroup.getId(), Collections.emptyList());
+        Menu menu2 = new Menu("name", new BigDecimal(0), menuGroup.getId(), Collections.emptyList());
         menus.add(testFixtureBuilder.buildMenu(menu2));
 
         orderTable = new OrderTable(null, 3, false);
@@ -56,7 +59,18 @@ class OrderServiceTest extends ServiceTest {
         @Test
         void orderCreate() {
             //given
-            final OrderCreateRequest request = new OrderCreateRequest(orderTable.getId(), menus.stream().map(menu -> new OrderCreateRequest.OrderLineItemCreate(menu.getId(), 2L)).collect(Collectors.toList()));
+            final OrderCreateRequest request = new OrderCreateRequest(orderTable.getId(),
+                    menus.stream()
+                            .map(menu -> new OrderCreateRequest.MenuSnapShot(
+                                    menu.getId(),
+                                    menu.getName(),
+                                    menu.getPrice(),
+                                    menu.getMenuProducts()
+                                            .stream()
+                                            .map(menuProduct -> new OrderCreateRequest.MenuSnapShot.ProductSnapShot(menuProduct.getSeq(), menuProduct.getProduct().getId(), menuProduct.getProduct().getName(), menuProduct.getProduct().getPrice(), menuProduct.getQuantity()))
+                                            .collect(Collectors.toList()),
+                                    2L))
+                            .collect(Collectors.toList()));
 
             //when
             final Long id = orderService.create(request);
@@ -66,6 +80,35 @@ class OrderServiceTest extends ServiceTest {
                 softly.assertThat(id).isNotNull();
             });
         }
+
+        @DisplayName("주문 도중 메뉴의 정보가 바뀌면 실패한다.")
+        @Test
+        void orderCreateFailWhenChangeMenuInformation() throws IllegalAccessException, NoSuchFieldException {
+            //given
+            final OrderCreateRequest request = new OrderCreateRequest(orderTable.getId(),
+                    menus.stream()
+                            .map(menu -> new OrderCreateRequest.MenuSnapShot(
+                                    menu.getId(),
+                                    menu.getName(),
+                                    menu.getPrice(),
+                                    menu.getMenuProducts()
+                                            .stream()
+                                            .map(menuProduct -> new OrderCreateRequest.MenuSnapShot.ProductSnapShot(menuProduct.getSeq(), menuProduct.getProduct().getId(), menuProduct.getProduct().getName(), menuProduct.getProduct().getPrice(), menuProduct.getQuantity()))
+                                            .collect(Collectors.toList()),
+                                    2L))
+                            .collect(Collectors.toList()));
+
+            final Menu menu = menus.get(0);
+            Field nameField = menu.getClass().getDeclaredField("name");
+            nameField.setAccessible(true);
+            nameField.set(menu, "change menu name");
+            testFixtureBuilder.buildMenu(menu);
+
+            // when & then
+            assertThatThrownBy(() -> orderService.create(request))
+                    .isInstanceOf(IllegalArgumentException.class);
+        }
+
 
         @DisplayName("주문 항목이 비어있으면 실패한다.")
         @Test
@@ -82,7 +125,14 @@ class OrderServiceTest extends ServiceTest {
         @Test
         void orderCreateFailWhenNotExistMenu() {
             //given
-            final OrderCreateRequest request = new OrderCreateRequest(orderTable.getId(), List.of(new OrderCreateRequest.OrderLineItemCreate(-1L, 2L)));
+            final OrderCreateRequest request = new OrderCreateRequest(orderTable.getId(),
+                    List.of(new OrderCreateRequest.MenuSnapShot(
+                            -1L,
+                            "not exists menu",
+                            new BigDecimal(0),
+                            Collections.emptyList(),
+                            1L
+                    )));
 
             // when & then
             assertThatThrownBy(() -> orderService.create(request))
@@ -93,7 +143,17 @@ class OrderServiceTest extends ServiceTest {
         @Test
         void orderCreateFailWhenNotExistOrderTable() {
             //given
-            final OrderCreateRequest request = new OrderCreateRequest(-1L, menus.stream().map(menu -> new OrderCreateRequest.OrderLineItemCreate(menu.getId(), 2L)).collect(Collectors.toList()));
+            final Menu menu = menus.get(0);
+            final OrderCreateRequest request = new OrderCreateRequest(-1L,
+                    List.of(new OrderCreateRequest.MenuSnapShot(
+                            menu.getId(),
+                            menu.getName(),
+                            menu.getPrice(),
+                            menu.getMenuProducts().stream()
+                                    .map(menuProduct -> new OrderCreateRequest.MenuSnapShot.ProductSnapShot(menuProduct.getSeq(), menuProduct.getProduct().getId(), menuProduct.getProduct().getName(), menuProduct.getProduct().getPrice(), menuProduct.getQuantity()))
+                                    .collect(Collectors.toList()),
+                            1L
+                    )));
 
             // when & then
             assertThatThrownBy(() -> orderService.create(request))
@@ -107,8 +167,17 @@ class OrderServiceTest extends ServiceTest {
             orderTable = new OrderTable(null, 3, true);
             orderTable = testFixtureBuilder.buildOrderTable(orderTable);
 
-            final OrderCreateRequest request = new OrderCreateRequest(orderTable.getId(), menus.stream().map(menu -> new OrderCreateRequest.OrderLineItemCreate(menu.getId(), 2L)).collect(Collectors.toList()));
-
+            final Menu menu = menus.get(0);
+            final OrderCreateRequest request = new OrderCreateRequest(orderTable.getId(),
+                    List.of(new OrderCreateRequest.MenuSnapShot(
+                            menu.getId(),
+                            menu.getName(),
+                            menu.getPrice(),
+                            menu.getMenuProducts().stream()
+                                    .map(menuProduct -> new OrderCreateRequest.MenuSnapShot.ProductSnapShot(menuProduct.getSeq(), menuProduct.getProduct().getId(), menuProduct.getProduct().getName(), menuProduct.getProduct().getPrice(), menuProduct.getQuantity()))
+                                    .collect(Collectors.toList()),
+                            1L
+                    )));
             // when & then
             assertThatThrownBy(() -> orderService.create(request))
                     .isInstanceOf(IllegalArgumentException.class);
@@ -123,7 +192,7 @@ class OrderServiceTest extends ServiceTest {
         @Test
         void orderFindAll() {
             //given
-            Order order = new Order(orderTable, OrderStatus.COOKING.name(), LocalDateTime.now(), Collections.emptyList());
+            Order order = new Order(orderTable.getId(), OrderStatus.COOKING.name(), LocalDateTime.now(), Collections.emptyList());
             order = testFixtureBuilder.buildOrder(order);
 
             //when
@@ -136,6 +205,51 @@ class OrderServiceTest extends ServiceTest {
                 softly.assertThat(actual.get(0).getId()).isEqualTo(orderId);
             });
         }
+
+        @DisplayName("주문을 생성후 메뉴 정보를 바꿔도 주문 항목의 메뉴 이름과 가격은 유지된다.")
+        @Test
+        void orderCreate() throws NoSuchFieldException, IllegalAccessException {
+            //given
+            final Menu menu = menus.get(0);
+            final String beforeMenuName = menu.getName();
+            final BigDecimal beforeMenuPrice = menu.getPrice();
+
+            final OrderCreateRequest request = new OrderCreateRequest(orderTable.getId(),
+                    List.of(new OrderCreateRequest.MenuSnapShot(
+                            menu.getId(),
+                            menu.getName(),
+                            menu.getPrice(),
+                            menu.getMenuProducts()
+                                    .stream()
+                                    .map(menuProduct -> new OrderCreateRequest.MenuSnapShot.ProductSnapShot(menuProduct.getSeq(), menuProduct.getProduct().getId(), menuProduct.getProduct().getName(), menuProduct.getProduct().getPrice(), menuProduct.getQuantity()))
+                                    .collect(Collectors.toList()),
+                            2L)));
+            orderService.create(request);
+
+            //when
+            final List<OrderResponse> actual = orderService.list();
+
+            final Field nameField = menu.getClass().getDeclaredField("name");
+            nameField.setAccessible(true);
+            nameField.set(menu, "change menu name");
+
+            final Field priceField = menu.getClass().getDeclaredField("price");
+            priceField.setAccessible(true);
+            final Price afterPrice = new Price(menu.getPrice().add(new BigDecimal(10000)));
+            priceField.set(menu, afterPrice);
+            final Menu afterMenu = testFixtureBuilder.buildMenu(menu);
+
+            //then
+            final OrderResponse orderResponse = actual.get(0);
+            final Long orderLineItemId = orderResponse.getOrderLineItemIds().get(0);
+            final OrderLineItem orderLineItem = testFixtureBuilder.getEntitySupporter().getOrderLineItemRepository().findById(orderLineItemId).orElseThrow(IllegalAccessError::new);
+            assertSoftly(softly -> {
+                softly.assertThat(orderLineItem.getMenuName()).isNotEqualTo(afterMenu.getName());
+                softly.assertThat(orderLineItem.getMenuName()).isEqualTo(beforeMenuName);
+                softly.assertThat(orderLineItem.getMenuPrice().getValue()).isNotEqualByComparingTo(afterPrice.getValue());
+                softly.assertThat(orderLineItem.getMenuPrice().getValue()).isEqualByComparingTo(beforeMenuPrice);
+            });
+        }
     }
 
     @DisplayName("주문 상태 변경 테스트")
@@ -146,7 +260,7 @@ class OrderServiceTest extends ServiceTest {
         @Test
         void orderStatusChange() {
             //given
-            Order order = new Order(orderTable, OrderStatus.COOKING.name(), LocalDateTime.now(), Collections.emptyList());
+            Order order = new Order(orderTable.getId(), OrderStatus.COOKING.name(), LocalDateTime.now(), Collections.emptyList());
             order = testFixtureBuilder.buildOrder(order);
 
             //when
@@ -174,7 +288,7 @@ class OrderServiceTest extends ServiceTest {
         @Test
         void orderStatusChangeFailWhenStatusIsCompletion() {
             //given
-            Order completionOrder = new Order(orderTable, OrderStatus.COMPLETION.name(), LocalDateTime.now(), Collections.emptyList());
+            Order completionOrder = new Order(orderTable.getId(), OrderStatus.COMPLETION.name(), LocalDateTime.now(), Collections.emptyList());
             completionOrder = testFixtureBuilder.buildOrder(completionOrder);
 
             final String changeStatus = OrderStatus.MEAL.name();
